# AuraLock

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  RESEARCH_ROADMAP.md
examples/: demo.py
examples/sample_images/: .gitkeep
notebooks/: 01_image_basics.ipynb
src/auralock/: __init__.py  cli.py
src/auralock/attacks/: __init__.py  base.py  fgsm.py  pgd.py
src/auralock/core/: __init__.py  image.py  metrics.py
src/auralock/ui/: __init__.py  gradio_app.py
src/tests/: __init__.py  test_fgsm.py  test_image.py  test_metrics.py
